--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.0.0",
     "strapi-plugin-multi-select": "^2.1.1",
     "strapi-plugin-tagsinput": "^2.0.2",
+    "strapi-plugin-webp-converter": "^1.0.4",
     "strapi-v5-plugin-populate-deep": "^4.0.5",
     "styled-components": "^6.0.0"
   },
