--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@_sh/strapi-plugin-ckeditor": "^6.0.1",
     "@strapi/plugin-cloud": "5.11.0",
+    "@strapi/plugin-email": "^4.25.12",
     "@strapi/plugin-users-permissions": "5.11.0",
     "@strapi/provider-email-sendgrid": "^5.11.0",
     "@strapi/strapi": "5.11.0",
